# onlinejudege

./: .dockerignore  .gitignore  README.md  SPEC.md  a.md  dependence.md  docker-compose.yml
backend/: CMakeLists.txt  Dockerfile
backend/cmake/: deps.cmake
backend/config/: default.json
backend/include/common/: config.hpp  error_code.hpp  response.hpp  version.hpp
backend/include/domain/: auth_service.hpp  judge_dispatcher.hpp  problem_repository.hpp  problem_service.hpp  problem_types.hpp  submission_repository.hpp  submission_service.hpp  submission_types.hpp  tag_repository.hpp  testcase_repository.hpp  user_repository.hpp
backend/include/http/: HttpServer.hpp
backend/include/http/handlers/: admin_problem_handler.hpp  auth_handler.hpp  health_handler.hpp  problem_handler.hpp  submission_handler.hpp
backend/include/http/middleware/: error.hpp  middleware.hpp
backend/include/infra/: docker_client.hpp  docker_judge_adapter.hpp  jwt_service.hpp  mysql_client.hpp  password_hasher.hpp  problem_repo.hpp  submission_repo.hpp  tag_repo.hpp  testcase_repo.hpp  user_repo.hpp
backend/sql/: 001_init.sql  002_seed.sql
backend/src/: main.cpp
backend/src/common/: config.cpp  response.cpp
backend/src/domain/: auth_service.cpp  judge_dispatcher.cpp  problem_service.cpp  problem_types.cpp  submission_service.cpp  submission_types.cpp
backend/src/http/: HttpServer.cpp
backend/src/http/handlers/: admin_problem_handler.cpp  auth_handler.cpp  health_handler.cpp  problem_handler.cpp  submission_handler.cpp
backend/src/http/middleware/: error.cpp  middleware.cpp
backend/src/infra/: docker_client.cpp  jwt_service.cpp  mysql_client.cpp  password_hasher.cpp  problem_repo.cpp  submission_repo.cpp  tag_repo.cpp  testcase_repo.cpp  user_repo.cpp
backend/tests/: test_admin_problem_handler.cpp  test_auth.cpp  test_auth_handler.cpp  test_auth_service.cpp  test_docker_client.cpp  test_error_middleware.cpp  test_judge_dispatcher.cpp  test_jwt_service.cpp  test_middleware.cpp  test_mysql_client.cpp  test_problem_handler.cpp  test_problem_handler_mysql.cpp  test_problem_repo_mysql.cpp  test_problem_service.cpp  test_problem_service_admin.cpp  test_problem_types.cpp  test_submission_handler.cpp  test_submission_handler_auth.cpp  test_submission_handler_edges.cpp  test_submission_repo_mysql.cpp  test_submission_service.cpp  test_submission_service_edges.cpp  test_submission_state_machine.cpp  test_tag_repo_mysql.cpp  test_testcase_repo_mysql.cpp  test_user_repo_mysql.cpp  unit_tests.cpp
docs/: phase1-verification.md  phase2-verification.md  phase3-verification.md  phase5-verification.md  phase6-1-verification.md  phase6-2-verification.md  phase7-2-verification.md  phase7-3-verification.md  phase7-5-verification.md  phase7-verification.md
frontend/: index.html
frontend/assets/: .gitkeep
frontend/css/: admin-page.css  base.css  components.css  layout.css  problem-page.css  submission-page.css
frontend/js/: main.js  router.js
frontend/js/api/: admin-problems.js  auth.js  client.js  problems.js  submissions.js
frontend/js/components/: header.js  markdown-renderer.js  monaco-loader.js  status-machine.js  toast.js
frontend/js/store/: state.js
frontend/js/utils/: dom.js  draft.js  format.js  poller.js  problem-cases.js  submission-detail-helpers.js
frontend/js/views/: _stub.js  admin-problem-edit.js  admin-problem-list.js  home.js  login.js  not-found.js  problem-detail.js  problem-list.js  register.js  submission-detail.js  submission-list.js
frontend/tests/: admin-problems.test.mjs  draft.e2e.mjs  draft.test.mjs  poller.test.mjs  problem-cases.test.mjs  status-machine.test.mjs  submission-detail-helpers.test.mjs  submission-list.test.mjs
judge-images/: .dockerignore  README.md  build.sh  smoke.sh
judge-images/c/: Dockerfile
judge-images/common/: .gitkeep  entrypoint.sh
judge-images/cpp/: Dockerfile
judge-images/go/: Dockerfile
judge-images/java/: Dockerfile
judge-images/python/: Dockerfile
judge-tool/: CMakeLists.txt
judge-tool/include/judge/: types.hpp
judge-tool/src/: compare.cpp  compare.hpp  compile.cpp  compile.hpp  main.cpp  meta.cpp  meta.hpp  monitor.cpp  monitor.hpp  result.cpp  result.hpp  runner.cpp  runner.hpp  status.cpp
judge-tool/tests/: test_compare.cpp  test_meta.cpp  test_runner_cpp.cpp  test_status.cpp
mysql/initdb/: .gitkeep
nginx/: nginx.conf
